Hero Section Added

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <script src="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.js"></script>
 </head>
 
-<body class="p-10">
+<body>
 
   <!-- Navigation Bar -->
 
-  <nav class = "flex justify-between items-center p">
+  <nav class="flex justify-between items-center pt-6 px-6">
 
     <!-- Left Section of the Navbar -->
 
     <div class="flex items-center space-x-2">
 
 
-      <img src="./assets/logo-dark.png" alt="Logo" class="h-10 w-auto">
+      <img src="./assets/logo.png" alt="Logo" class="h-10 w-auto">
 
       <p class="font-bold leading-tight text-green-900">Emergency<br>Service</p>
 
@@ -28,22 +28,40 @@
 
     <!-- Right Section of the Navbar -->
 
-    <div class ="flex items-center space-x-4">
+    <div class="flex items-center space-x-4">
 
-      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3" style="background-color: #ecfcf1;">
-        <img src = "./assets/heart.png" alt="Phone Icon" class="h-5 w-5">
-        <span class = "font-bold">0</span>
+      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
+        style="background-color: #ecfcf1;">
+        <img src="./assets/heart.png" alt="Phone Icon" class="h-5 w-5">
+        <span class="font-bold">0</span>
       </button>
-      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3" style="background-color: #ecfcf1;">
-        <img src = "./assets/coin.png" alt="Phone Icon" class="h-5 w-5">
-        <span class = "font-bold">100</span>
+      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
+        style="background-color: #ecfcf1;">
+        <img src="./assets/coin.png" alt="Phone Icon" class="h-5 w-5">
+        <span class="font-bold">100</span>
       </button>
-      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3" style="background-color: #00A63E;">
-        <span class ="text-white font-semibold" >2 Copy</span>
+      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
+        style="background-color: #00A63E;">
+        <span class="text-white font-semibold">2 Copy</span>
       </button>
 
     </div>
   </nav>
+
+  <!-- Hero Section -->
+
+  <section class="w-full text-center space-y-4 flex flex-col items-center justify-center my-5"
+    style="background: linear-gradient(to right, #143927, #006747, #143927);">
+
+    <img src="./assets/logo-dark.png" alt="Hero Image" class="w-32 h-auto pt-3">
+
+    <h1 class="font-bold text-white text-[40px]">Emergency Service Directory</h1>
+
+    <p class="text-white pb-3 font-semibold">
+      Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh
+    </p>
+
+  </section>
 
 
 </body>
