Main Section version_01

--- a/index.html
+++ b/index.html
@@ -63,6 +63,338 @@
 
   </section>
 
+  <!-- Main Section -->
+
+  <main>
+
+    <div class="flex">
+
+      <!-- Helplines -->
+
+      <div class="grid grid-cols-3 gap-4 p-4">
+
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow p-4">
+
+          <div class="flex items-center justify-between">
+
+            <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6 mb-2">
+
+          </div>
+
+          <p class="font-bold text-[24px]">National Emergency Number</p>
+          <p class="font-light">National Emergency</p>
+          <p class="font-bold text-[28px] pt-3">999</p>
+          <button class="btn btn-square" style="background-color: #f2f2f2;">
+            All
+          </button>
+
+          <div class="flex space-x-4 pt-2 ">
+            <!-- Copy Button -->
+            <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+              style="width: 170px; height: 40px; ">
+              <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+              <span class="font-normal">Copy</span>
+            </button>
+
+            <!-- Call Button -->
+
+            <button class="flex items-center justify-center space-x-2 rounded-lg"
+              style="width: 170px; height: 40px; background-color: #00A63E; color: white;">
+              <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+              <span class="font-normal">Call</span>
+
+            </button>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Call History -->
+      <!-- Call History -->
+      <div class="mt-8 p-4">
+
+      </div>
+
+
+    </div>
+
+
+  </main>
+
 
 </body>
 
