--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <span class="font-bold" id="coin-amount">100</span>
       </div>
 
-      <button class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
+      <div class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
         style="background-color: #00A63E;">
         <span class="text-white font-semibold">2 Copy</span>
-      </button>
+    </div>
 
     </div>
   </nav>
