--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- JS Scripts -->
 
   <script src="./script.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 </head>
@@ -22,56 +23,56 @@
 
   <!-- Navigation Bar -->
 
-  <nav class="flex justify-between items-center pt-6 px-6">
+  <nav class="w-full flex justify-between items-center px-4 sm:px-6 py-4 bg-white shadow">
 
-    <!-- Left Section of the Navbar -->
-
+    <!-- Left Section -->
     <div class="flex items-center space-x-2">
-
-
       <img src="./assets/logo.png" alt="Logo" class="h-10 w-auto">
-
-      <p class="font-bold leading-tight text-green-900">Emergency<br>Service</p>
-
+      <p class="font-bold leading-tight text-green-900">
+        Emergency<br>Service
+      </p>
     </div>
 
-    <!-- Right Section of the Navbar -->
-
+    <!-- Right Section -->
     <div class="flex items-center space-x-4">
-
-      <div class="rounded-full flex items-center space-x-2 px-6 py-3" style="background-color: #ecfcf1;">
+      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-[#ecfcf1]">
         <img src="./assets/heart.png" alt="heart Icon" class="h-5 w-5">
         <span class="font-bold" id="heart-count">0</span>
       </div>
 
-      <div class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
-        style="background-color: #ecfcf1;">
+      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-[#ecfcf1]">
         <img src="./assets/coin.png" alt="Phone Icon" class="h-5 w-5">
         <span class="font-bold" id="coin-amount">100</span>
       </div>
 
-      <div class="btn btn-success rounded-full flex items-center space-x-2 px-6 py-3"
-        style="background-color: #00A63E;">
+      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-green-600">
         <span class="text-white font-semibold">2 Copy</span>
+      </div>
     </div>
 
-    </div>
   </nav>
+
 
   <!-- Hero Section -->
 
-  <section class="w-full text-center space-y-4 flex flex-col items-center justify-center my-5"
-    style="background: linear-gradient(to right, #143927, #006747, #143927);">
+  <section class="w-full text-center flex flex-col items-center justify-center my-5 px-4
+    bg-gradient-to-r from-[#143927] via-[#006747] to-[#143927]">
 
-    <img src="./assets/logo-dark.png" alt="Hero Image" class="w-32 h-auto pt-3">
+    <!-- Logo -->
+    <img src="./assets/logo-dark.png" alt="Hero Image" class="w-24 sm:w-32 h-auto pt-3">
 
-    <h1 class="font-bold text-white text-[40px]">Emergency Service Directory</h1>
+    <!-- Title -->
+    <h1 class="font-bold text-white text-2xl sm:text-4xl md:text-5xl mt-2">
+      Emergency Service Directory
+    </h1>
 
-    <p class="text-white pb-3 font-semibold">
+    <!-- Subtitle -->
+    <p class="text-white font-semibold text-sm sm:text-base md:text-lg pb-3 max-w-3xl">
       Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh
     </p>
 
   </section>
+
 
 
   <!-- Main Section -->
