Navbar for mobile

--- a/index.html
+++ b/index.html
@@ -25,31 +25,32 @@
   <nav class="w-full flex justify-between items-center px-4 sm:px-6 py-4 bg-white shadow">
 
     <!-- Left Section -->
-    <div class="flex items-center space-x-2">
-      <img src="./assets/logo.png" alt="Logo" class="h-10 w-auto">
-      <p class="font-bold leading-tight text-green-900">
+    <div class="flex items-center space-x-3 sm:space-x-2">
+      <img src="./assets/logo.png" alt="Logo" class="h-12 sm:h-10 w-auto">
+      <p class="font-bold leading-tight text-green-900 text-lg sm:text-base">
         Emergency<br>Service
       </p>
     </div>
 
     <!-- Right Section -->
     <div class="flex items-center space-x-4">
-      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-[#ecfcf1]">
-        <img src="./assets/heart.png" alt="heart Icon" class="h-5 w-5">
-        <span class="font-bold" id="heart-count">0</span>
+      <div class="rounded-full flex items-center space-x-3 sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-[#ecfcf1]">
+        <img src="./assets/heart.png" alt="heart Icon" class="h-6 sm:h-5 w-6 sm:w-5">
+        <span class="font-bold text-lg sm:text-base" id="heart-count">0</span>
       </div>
 
-      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-[#ecfcf1]">
-        <img src="./assets/coin.png" alt="Phone Icon" class="h-5 w-5">
-        <span class="font-bold" id="coin-amount">100</span>
+      <div class="rounded-full flex items-center space-x-3 sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-[#ecfcf1]">
+        <img src="./assets/coin.png" alt="Phone Icon" class="h-6 sm:h-5 w-6 sm:w-5">
+        <span class="font-bold text-lg sm:text-base" id="coin-amount">100</span>
       </div>
 
-      <div class="rounded-full flex items-center space-x-2 px-4 py-2 bg-green-600">
-        <span class="text-white font-semibold">2 Copy</span>
+      <div class="rounded-full flex items-center space-x-3 sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-green-600">
+        <span class="text-white font-semibold text-lg sm:text-base">2 Copy</span>
       </div>
     </div>
 
   </nav>
+
 
 
   <!-- Hero Section -->
