--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>DaisyUI via CDN</title>
+  <title>Assignment 5</title>
 
   <!-- Tailwind + DaisyUI CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -26,7 +26,7 @@
 
     <!-- Left Section -->
     <div class="flex items-center space-x-3 sm:space-x-2">
-      <img src="./assets/logo.png" alt="Logo" class="h-20 sm:h-10 w-auto">
+      <img src="assets/logo.png" alt="Logo" class="h-20 sm:h-10 w-auto">
       <p class="font-bold leading-tight text-green-900 text-lg sm:text-base">
         Emergency<br>Service
       </p>
@@ -35,12 +35,12 @@
     <!-- Right Section -->
     <div class="flex items-center space-x-4">
       <div class="rounded-full flex items-center space-x-3 sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-[#ecfcf1]">
-        <img src="./assets/heart.png" alt="heart Icon" class="h-20 sm:h-5 w-6 sm:w-5">
+        <img src="assets/heart.png" alt="heart Icon" class="h-20 sm:h-5 w-6 sm:w-5">
         <span class="font-bold text-lg sm:text-base" id="heart-count">0</span>
       </div>
 
       <div class="rounded-full flex items-center space-x-3 sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-[#ecfcf1]">
-        <img src="./assets/coin.png" alt="Phone Icon" class="h-6 sm:h-5 w-6 sm:w-5">
+        <img src="assets/coin.png" alt="Phone Icon" class="h-6 sm:h-5 w-6 sm:w-5">
         <span class="font-bold text-lg sm:text-base" id="coin-amount">100</span>
       </div>
 
@@ -58,7 +58,7 @@
   <section class="w-full text-center space-y-4 flex flex-col items-center justify-center my-5"
     style="background: linear-gradient(to right, #143927, #006747, #143927);">
 
-    <img src="./assets/logo-dark.png" alt="Hero Image" class="w-32 h-auto pt-3">
+    <img src="assets/logo-dark.png" alt="Hero Image" class="w-32 h-auto pt-3">
 
     <h1 class="font-bold text-white text-[40px]">Emergency Service Directory</h1>
 
@@ -79,9 +79,9 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
 
         </div>
@@ -97,13 +97,13 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -113,9 +113,9 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/police.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/police.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -130,7 +130,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -138,7 +138,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg call-button"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -148,9 +148,9 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/fire-service.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/fire-service.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -165,7 +165,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -173,7 +173,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg call-button"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -202,7 +202,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/ambulance.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/ambulance.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -219,7 +219,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -227,7 +227,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg call-button"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -237,7 +237,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -254,7 +254,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -262,7 +262,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg call-button"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -272,7 +272,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -289,7 +289,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -297,7 +297,7 @@
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -307,7 +307,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -324,7 +324,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -332,7 +332,7 @@
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -342,7 +342,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/brac.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/brac.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -359,7 +359,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -367,7 +367,7 @@
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
@@ -377,7 +377,7 @@
 
         <div class="flex items-center justify-between">
 
-          <img src="./assets/Bangladesh-Railway.png" alt="Police" class="h-10 w-10 mb-2">
+          <img src="assets/Bangladesh-Railway.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
             <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
@@ -394,7 +394,7 @@
 
           <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
-            <img src="./assets/copy.png" alt="Copy" class="h-5 w-5">
+            <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
@@ -402,7 +402,7 @@
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
-            <img src="./assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
+            <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
 
           </button>
