--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
           <img src="assets/ambulance.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -239,7 +239,7 @@
 
           <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -274,7 +274,7 @@
 
           <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -379,7 +379,7 @@
 
           <img src="assets/Bangladesh-Railway.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
