Heart Icon fixed

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
           <img src="assets/emergency.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
@@ -344,7 +344,7 @@
 
           <img src="assets/brac.png" alt="Police" class="h-10 w-10 mb-2">
           <button class="p-1 rounded-lg hover:bg-gray-200 heart-button">
-            <img src="/assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
+            <img src="assets/hollow_heart.png" alt="Hollow Heart" class="h-6 w-6">
           </button>
         </div>
 
